--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+        <style>
+            body {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        </style>
     </head>
     <body>
-        <script src='./index.js'></script>
+        <canvas id="game-of-life-canvas"></canvas>
+        <script src='./bootstrap.js'></script>
     </body>
 </html>
