--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     </head>
     <body>
-        <script src='./index.js'></script>
+        <script src='./bootstrap.js'></script>
     </body>
 </html>
