--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
                 width: 100%;
                 height: 100%;
                 display: flex;
+                flex-direction: column;
                 align-items: center;
                 justify-content: center;
             }
         </style>
     </head>
     <body>
+        <button id="play-pause"></button>
         <canvas id="game-of-life-canvas"></canvas>
         <script src='./bootstrap.js'></script>
     </body>
