Implement canvas rendering speed ups and replace modulo with well-predicted branches

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                font-family: monospace;
+                white-space: pre;
             }
         </style>
     </head>
     <body>
         <button id="play-pause"></button>
+        <div id="fps"></div>
         <canvas id="game-of-life-canvas"></canvas>
         <script src='./bootstrap.js'></script>
     </body>
