Remove default body margin to remove scrollbars

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <title>Hello wasm-pack!</title>
     <style>
      body {
+       margin: 0;
        position: absolute;
        top: 0;
        left: 0;
